read a csv file to build a dataset

--- a/readme
+++ b/readme
@@ -1,1 +1,44 @@
 you can use this repo to post-train or infer qwen2.5-vl
+
+# My_Qwen - 通义千问本地化部署 WebUI
+
+这是一个用于在您自己的计算机上本地部署阿里云通义千问（Qwen）大语言模型的项目。通过本项目，您可以轻松启动一个基于 Gradio 的 Web 交互界面，与 Qwen 模型进行对话。
+
+[![Python](https://img.shields.io/badge/Python-3.8+-blue.svg)](https://www.python.org/downloads/)
+[![Transformers](https://img.shields.io/badge/🤗-Transformers-yellow.svg)](https://github.com/huggingface/transformers)
+[![Gradio](https.img.shields.io/badge/Gradio-orange)](https://gradio.app/)
+[![License: MIT](https://img.shields.io/badge/License-MIT-green.svg)](https://opensource.org/licenses/MIT)
+
+
+## 📖 项目简介
+
+本项目旨在简化通义千问（Qwen）系列模型（如 Qwen-1.8B-Chat, Qwen-7B-Chat 等）的本地化运行流程。您无需复杂的环境配置，即可在本地拥有一个私有、免费的大模型聊天应用。
+
+## ✨ 主要特性
+
+* **💻 本地化部署**: 所有计算都在您自己的设备上完成，确保数据隐私和安全。
+* **🌐 Web 用户界面**: 基于 Gradio 构建，提供了一个简洁直观的聊天窗口。
+* **🤖 支持多模型**: 项目结构清晰，可以轻松切换或添加不同规模的 Qwen 模型。
+* **🔧 易于上手**: 只需几个简单的步骤即可完成安装和启动。
+
+## 🖼️ 项目截图
+
+*（建议您在这里替换成自己项目运行时的截图）*
+![项目运行截图](https://raw.githubusercontent.com/Mr-Dandelion/My_Qwen/main/path/to/your/screenshot.png)
+
+
+## 🚀 快速开始
+
+请遵循以下步骤来安装和运行本项目。
+
+### 1. 环境准备
+
+* 确保您已安装 [Python 3.8](https://www.python.org/) 或更高版本。
+* 确保您已安装 `git` 用于克隆仓库。
+
+### 2. 克隆项目
+
+打开您的终端，克隆本仓库到本地。
+```bash
+git clone [https://github.com/Mr-Dandelion/My_Qwen.git](https://github.com/Mr-Dandelion/My_Qwen.git)
+cd My_Qwen
